--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="col-lg-6">
               <div class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
-                <img src="img/l1.png" class="img-responsive" alt="" />
+                <img src="img/l1.jpg" class="img-responsive" alt="" />
               </div>
             </div>
           </div>
@@ -129,7 +129,7 @@
         <div class="row">
           <div class="col-sm-6 col-md-6">
             <div class="wow fadeInUp" data-wow-delay="0.2s">
-              <img src="img/l1.png" class="img-responsive" alt="" />
+              <img src="img/l1.jpg" class="img-responsive" alt="" />
             </div>
           </div>
           <div class="col-sm-3 col-md-3">
