--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
   <!-- template skin -->
   <link id="t-colors" href="color/default.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: Medicio
-    Theme URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+ 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -43,7 +38,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6 col-md-6">
-              <p class="bold text-left">Monday - Saturday, 8am to 10pm </p>
+              <p class="bold text-left"> STANKIN </p>
             </div>
             <div class="col-sm-6 col-md-6">
               <p class="bold text-right">Call us now +79654122386</p>
@@ -84,19 +79,15 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="wow fadeInDown" data-wow-offset="0" data-wow-delay="0.1s">
-                <h2 class="h-ultra">Medicio medical group</h2>
+                <h2 class="h-ultra">Рахматуллах Мд</h2>
               </div>
               <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.1s">
-                <h4 class="h-light">Provide best quality healthcare for you</h4>
+                <h4 class="h-light">Студент ИДМ-19-02</h4>
               </div>
               <div class="well well-trans">
                 <div class="wow fadeInRight" data-wow-delay="0.1s">
 
-                  <ul class="lead-list">
-                    <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Affordable monthly premium packages</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
-                    <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Choose your favourite doctor</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
-                    <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Only use friendly environment</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
-                  </ul>
+                  
                   <p class="text-right wow bounceIn" data-wow-delay="0.4s">
                     <a href="#" class="btn btn-skin btn-lg">Learn more <i class="fa fa-angle-right"></i></a>
                   </p>
