--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="col-lg-6">
               <div class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
-                <img src="img/l1.jpg" class="img-responsive" alt="" />
+                <img src="img/suvo.jpg" class="img-responsive" alt="" />
               </div>
             </div>
           </div>
