--- a/index.html
+++ b/index.html
@@ -85,7 +85,19 @@
                 <h4 class="h-light">Студент ИДМ-19-02</h4>
               </div>
               
+<div class="well well-trans">
+                <div class="wow fadeInRight" data-wow-delay="0.1s">
 
+                  <ul class="lead-list">
+                    <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Affordable monthly premium packages</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
+                    <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Choose your favourite doctor</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
+                    <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Only use friendly environment</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
+                  </ul>
+                  <p class="text-right wow bounceIn" data-wow-delay="0.4s">
+                    <a href="#" class="btn btn-skin btn-lg"> <i class="fa fa-angle-right"></i></a>
+                  </p>
+                </div>
+              </div>
 
             </div>
             <div class="col-lg-6">
