--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@
                   <span class="fa fa-stethoscope fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">Medical checkup</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <h1 class="h-light">Лабораторная работа №1</h1>
+                  <p>1. Регистрация на GitHub.</p>
+		  <p>2. Подключение к репозиторию.</p>
+		  <p>3. Создание личной страницы.</p>
+		  <p>4. Размещение кода исходной страницы в репозитории.</p>
+		  <p>5. Размещение странички на хостинге..</p>
                 </div>
               </div>
             </div>
