--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			
 		  <ul class="lead-list">
                     <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Moscow State Technological University “STANKIN“
-</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
+			</strong><br /></span></li>
                     
                   </ul>
                   
