--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6 col-md-6">
-              <p class="bold text-left"> STANKIN </p>
+              <p class="bold text-left"> «Московский государственный технологический университет «СТАНКИН» </p>
             </div>
             <div class="col-sm-6 col-md-6">
-              <p class="bold text-right">Call us now +79654122386</p>
+              
             </div>
           </div>
         </div>
