--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <li class="cbp-item psychiatrist">
                   <a href="doctors/member1.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/1.jpg" alt="" width="100%">
+                      <img src="img/team/p3.jpg" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
@@ -186,7 +186,7 @@
                 <li class="cbp-item cardiologist">
                   <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/2.jpg" alt="" width="100%">
+                      <img src="img/team/p4.jpg" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
