--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
           </div>
         </div>
       </div>
+	    
+	    
+	    <div class="container">
+
+        <div class="row">
+          <div class="col-sm-6 col-md-6">
+            <div class="wow fadeInUp" data-wow-delay="0.2s">
+              <img src="img/team/p3.jpg" class="img-responsive" alt="" />
+            </div>
+          </div>
+		
+		
 
 <div class="container">
         <div class="row">
