--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
               <img src="img/team/p3.jpg" class="img-responsive" alt="" />
             </div>
           </div>
+		 </div>
+		     </div>
 		
 		
 
