--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
                         <div class="cbp-l-caption-body">
-                          <div class="cbp-l-caption-text">VIEW PROFILE</div>
+                          <div class="cbp-l-caption-text">VIEW </div>
                         </div>
                       </div>
                     </div>
@@ -184,7 +184,7 @@
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
                         <div class="cbp-l-caption-body">
-                          <div class="cbp-l-caption-text">VIEW PROFILE</div>
+                          <div class="cbp-l-caption-text">VIEW</div>
                         </div>
                       </div>
                     </div>
@@ -200,7 +200,7 @@
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
                         <div class="cbp-l-caption-body">
-                          <div class="cbp-l-caption-text">VIEW PROFILE</div>
+                          <div class="cbp-l-caption-text">VIEW</div>
                         </div>
                       </div>
                     </div>
@@ -216,7 +216,7 @@
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
                         <div class="cbp-l-caption-body">
-                          <div class="cbp-l-caption-text">VIEW PROFILE</div>
+                          <div class="cbp-l-caption-text">   </div>
                         </div>
                       </div>
                     </div>
