--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                       </div>
                     </div>
                   </a>
-                  <a href="doctors/member1.html" class="cbp-singlePage cbp-l-grid-team-name">Alice Grue</a>
-                  <div class="cbp-l-grid-team-position">Psychiatrist</div>
+                  <a href="doctors/member1.html" class="cbp-singlePage cbp-l-grid-team-name">HTML</a>
+                  
                 </li>
                 <li class="cbp-item cardiologist">
                   <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
