--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <li class="cbp-item psychiatrist">
                   <a href="doctors/member1.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/1.jpg" alt="" width="100%">
+                      <img src="img/team/p5.jpg" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
