--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <li class="cbp-item cardiologist">
                   <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/2.jpg" alt="" width="100%">
+                      <img src="img/team/p4.jpg" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
@@ -189,13 +189,13 @@
                       </div>
                     </div>
                   </a>
-                  <a href="doctors/member2.html" class="cbp-singlePage cbp-l-grid-team-name">Joseph Murphy</a>
-                  <div class="cbp-l-grid-team-position">Cardiologist</div>
+                  <a href="doctors/member2.html" class="cbp-singlePage cbp-l-grid-team-name">CSS</a>
+                  
                 </li>
                 <li class="cbp-item cardiologist">
                   <a href="doctors/member3.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/3.jpg" alt="" width="100%">
+                      <img src="img/team/p3.jpg" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
@@ -205,8 +205,8 @@
                       </div>
                     </div>
                   </a>
-                  <a href="doctors/member3.html" class="cbp-singlePage cbp-l-grid-team-name">Alison Davis</a>
-                  <div class="cbp-l-grid-team-position">Cardiologist</div>
+                  <a href="doctors/member3.html" class="cbp-singlePage cbp-l-grid-team-name">JS</a>
+                  
                 </li>
                 <li class="cbp-item neurologist">
                   <a href="doctors/member4.html" class="cbp-caption cbp-singlePage">
